add section page

--- a/sample.tex
+++ b/sample.tex
@@ -29,6 +29,10 @@
 
 \begin{document}
 \maketitle
+\begin{frame}
+    \frametitle{outline}
+    \tableofcontents[pausesections]                                                                                 
+\end{frame}
 \section{start}
 \begin{frame}
 \frametitle{Hello world}
@@ -45,6 +49,7 @@ this is how it ends
     \item done4
 \end{itemize}
 \end{frame}
+\senction{end}
 \begin{frame}
 \frametitle{我靠}
 \begin{block}{test chinese}
