--- a/sample.tex
+++ b/sample.tex
@@ -49,7 +49,7 @@ this is how it ends
     \item done4
 \end{itemize}
 \end{frame}
-\senction{end}
+\section{end}
 \begin{frame}
 \frametitle{我靠}
 \begin{block}{test chinese}
