add more packages

--- a/sample.tex
+++ b/sample.tex
@@ -2,6 +2,8 @@
 \usepackage{graphicx}
 \usepackage{tikz}
 \usepackage{textpos}
+%% better Verbatim
+\usepackage{fancyvrb}
 \usepackage{fontspec}
 \usepackage[BoldFont,SlantFont,CJKsetspaces,CJKchecksingle]{xeCJK}
 %%\setmainfont{}
@@ -9,6 +11,12 @@
 \usepackage{arabtex}
 \usepackage{color}
 \usepackage{hyperref}
+%% link setup
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    urlcolor=blue,
+}
 \useoutertheme{infolines}
 
 \newcommand{\logoimagepath}{logos/demonware.jpg}
